fix: исправление ошибок в CI/CD workflows
Исправленные проблемы:
- module-updated.yml: использование PAT_TOKEN вместо GITHUB_TOKEN для коммитов
- module-updated.yml: исправление синтаксиса jq команды
- build-module.yml: автоматическое создание Apache конфигурации если отсутствует
- build-module.yml: включение необходимых Apache модулей

Эти исправления должны устранить сбои в цепочке доставки модулей.

--- a/.github/workflows/module-updated.yml
+++ b/.github/workflows/module-updated.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Checkout infotecha repository
       uses: actions/checkout@v4
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.PAT_TOKEN }}
         
     - name: Parse module update payload
       id: parse
@@ -36,7 +36,7 @@ jobs:
         
         # Обновляем дату последнего обновления модуля
         jq --arg module "$MODULE_NAME" --arg date "$UPDATED_AT" \
-           '.modules[$module].last_updated = $date | .last_updated = now | strftime("%Y-%m-%dT%H:%M:%SZ")' \
+           '(.modules[$module].last_updated = $date) | (.last_updated = (now | strftime("%Y-%m-%dT%H:%M:%SZ")))' \
            modules.json > modules.json.tmp
         
         mv modules.json.tmp modules.json
