Force specific hugo-templates commit to ensure fixed version is used
- Pin to commit 5f85b57 which contains the nested public directory fix
- This ensures GitHub Actions uses the updated build script

--- a/.github/workflows/build-module-v2.yml
+++ b/.github/workflows/build-module-v2.yml
@@ -170,6 +170,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: info-tech-io/hugo-templates
+        ref: 5f85b57
         path: hugo-templates
         token: ${{ secrets.PAT_TOKEN }}
         submodules: recursive
